<resources>
    <string name="app_name">Music Shop</string>
    <string name="your_name">Your Name</string>
    <string name="button">Button</string>
    <string name="sale_30">Sale -30%</string>
    <string name="select_items">Select Items</string>
    <string name="order_price_n_0">Order Price</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="sale_guitar">TODO</string>
    <string name="guitar">TODO</string>
    <string name="_1">1</string>
    <string name="_149">0 $</string>
</resources>